--- a/index2.html
+++ b/index2.html
@@ -57,14 +57,14 @@
             <p>ברוכים הבאים למשחק איקס עיגול    </p>
             <div class="proj-btns">
                 <button class="btn">
-                    <a href="https://koralmy.github.io/coffeeLandd/" target="_blank" > 
+                    <a href="https://koralmy.github.io/tic-tac-tow/" target="_blank" > 
                     קישור לפרוייקט 
                     <i class="fa-brands fa-github" style="color: #000000;"></i>
                  </a>
                 </button>
 
                 <button class="btn">
-                    <a href="https://github.com/koralmy/coffeeLandd/archive/refs/heads/main.zip" target="_blank">
+                    <a href="https://github.com/koralmy/tic-tac-tow/archive/refs/heads/main.zip" target="_blank">
                          להורדת קבצי הפרוייקט 
                          <i class="fa-solid fa-cloud-arrow-down" style="color: #000000;"></i>
                         </a>
