--- a/index2.html
+++ b/index2.html
@@ -90,7 +90,9 @@
 
     <section class="landing-section">
         <div class="landing-pic">
+            <a href="https://koralmy.github.io/tic-tac-tow/" target="_blank" > 
             <img src="img/איקס-עיגול.jpg" alt="תמונה של דף איקס עיגול ">
+            </a>
             
 
            
