--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <link rel="stylesheet" href="style.css">
  <meta name="description" content="אתר זה הוא משחק איקס עיגול">
+<link rel="icon" type="image" href="img/favicon.jpg.png">
 
  <title>Tic-Tac-Toe - CodeBrainer</title>
 </head>
